compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_prim_type-12.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "var _ : boolean"

---
database:
stmt:
Idx::<Stmt>(0) (0..15): ConstVar(ConstVar { is_register: false, is_const: false, names: [DefId(0)], tail: TypeSpec(Idx::<Type>(0)) })

expr:

ty:
Idx::<Type>(0) (8..15): Primitive(Boolean)

root stmts:
[Idx::<Stmt>(0)]
symtab:
DefId(0): (4..5, Symbol { name: "_", kind: Declared, is_pervasive: false, def_id: DefId(0), next_use: 0 })

