compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_prim_type-14.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "var _ : char"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..12): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..12): []
        StmtItem@(FileId(1), 0..12): ItemId(0)
          ConstVar@(FileId(1), 0..12): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..12): Char

